--- a/myproject/todo/templates/todo_folder/login.html
+++ b/myproject/todo/templates/todo_folder/login.html
@@ -4,8 +4,13 @@
 <form method="POST">
     {% csrf_token %}
     <input type="text" name="username" placeholder="Username">
-    <input type="password" name="password1" placeholder="Password">
+    <input type="password" name="password" placeholder="Password">
     <button class="submit">Login</button>
+
+    {% for message in messages %}
+    <p id="messages">{{message}}</p>
+    {% endfor %}
+
     <a href="{% url 'register' %}">
         <p>Don't have an account?</p>
     </a>
