--- a/myproject/todo/templates/todo_folder/register.html
+++ b/myproject/todo/templates/todo_folder/register.html
@@ -1,17 +1,21 @@
 {% load static %}
+{% block content %}
 <link rel="stylesheet" href="{% static 'css/register.css' %}">
-<h2>Registration</h2>
-<form method="POST">
-    {% csrf_token %}
-    <input type="text" name="username" placeholder="Username">
-    <input type="email" name="email" placeholder="Email">
-    <input type="password" name="password1" placeholder="Password">
-    <input type="password" name="password2" placeholder="Confirm Password">
-    <button class="submit">Register Account</button>
+<div class="all">
+    <form method="POST" class="forms">
+        <h2>Registration</h2>
+        {% csrf_token %}
+        <input type="text" name="username" placeholder="Username">
+        <input type="email" name="email" placeholder="Email">
+        <input type="password" name="password1" placeholder="Password">
+        <input type="password" name="password2" placeholder="Confirm Password">
+        <button class="submit">Register Account</button>
 
-    {{form.errors}}
+        {{form.errors}}
 
-    <a href="{% url 'login' %}">
-        <p>Already have an account?</p>
-    </a>
-</form>
+        <a href="{% url 'login' %}">
+            <p>Already have an account?</p>
+        </a>
+    </form>
+</div>
+{% endblock %}
