--- a/myproject/todo/static/css/register.css
+++ b/myproject/todo/static/css/register.css
@@ -1,63 +1,67 @@
-    body {
-        display: flex;
-        font-family: "Open Sans", sans-serif;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        height: 90vh;
-    }
+.all {
+    background-color: #efefef;
+    display: flex;
+    justify-content: center;
+    padding: 20px 20px;
+    align-items: center;
+    width: 400px;
+    height: auto;
+    margin: auto;
+    border-radius: 8px;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
+    margin-top: 50px;
+}
 
-    .register-container {
-        background-color: rgb(113, 85, 85);
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.5);
-        width: 350px;
-        border-color: 2px solid #357ab8;
+.forms {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+}
 
-    }
+form input {
+    width: 100%;
+    padding: 10px 5px;
+    margin-bottom: 20px;
+    border: none;
+    border-bottom: 2px solid #b4b4b4;
+    background: transparent;
+    outline: none;
+    transition: border-color 0.3s;
+}
 
-    form input {
-        width: 100%;
-        padding: 10px 5px;
-        margin-bottom: 20px;
-        border: none;
-        border-bottom: 2px solid #b4b4b4;
-        background: transparent;
-        outline: none;
-        transition: border-color 0.3s;
-    }
-
-    form input:focus {
-        border-bottom: 2px solid #62758d;
-    }
+form input:focus {
+    border-bottom: 2px solid #62758d;
+}
 
 
-    button.submit {
-        margin-top: 20px;
-        width: 100%;
-        padding: 16px 20px;
-        background-color: #62758d;
-        border: none;
-        color: white;
-        font-size: 14px;
-        border-radius: 6px;
-        cursor: pointer;
-    }
+button.submit {
+    margin-top: 20px;
+    width: 100%;
+    padding: 16px 20px;
+    background-color: #4d5968;
+    border: none;
+    color: white;
+    font-size: 14px;
+    border-radius: 6px;
+    cursor: pointer;
+}
 
-    .btn-submit:hover {
-        background: #357ab8;
-    }
+.btn-submit:hover {
+    background: #357ab8;
+}
 
-    p {
-        text-align: center;
-        cursor: pointer;
-        color: #357ab8;
-        text-decoration: none;
-        list-style-type: none;
-    }
+p {
+    text-align: center;
+    cursor: pointer;
+    color: #253645;
+    text-decoration: none;
+    list-style-type: none;
+}
 
-    a {
-        text-decoration: none;
-        list-style-type: none;
-    }
+a {
+    text-decoration: none;
+    list-style-type: none;
+}
