--- a/myproject/todo/templates/todo_folder/home.html
+++ b/myproject/todo/templates/todo_folder/home.html
@@ -5,26 +5,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>{% block title %} Home {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
 </head>
 
 <body>
-
     <nav>
-        <div class="logo">Task Tracker</div>
-        <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('active')">
-            <span></span>
-            <span></span>
-            <span></span>
-        </div>
+        <div class="logo"><a href="{% url 'home' %}"><img class="logo_pic" src="{% static 'img/logo.svg' %}"></a></div>
+        <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('active')"></div>
         <ul class="nav-links">
-            <button class="login1"><a href="{% url 'login' %}">Hello, {{request.user}} !</a></button>
+            <button class="login1"><a href="{% url 'login' %}">Hello, {{request.user}}!</a></button>
             <button class="login1"><a href="{% url 'logout' %}">Logout</a></button>
         </ul>
     </nav>
     <span class="hello-msg"><a href="{% url 'logout' %}"></a></span>
 
+    {% block content %}
+    <h3>My tasks</h3>
+
+    <form method="get">
+    {{ myfilter.form.as_p }}
+    <button type="submit">Search</button>
+    </form>
+
+    <a href="{% url 'task_create' %}">Add a task</a>
+    <ul>
+        {% for task in tasks %}
+        <li>
+            <p>Title:   <strong>{{task.title}}</strong></p>
+            <p>Description:  {{task.description|linebreaks}}</p>
+            <p>Deadline:     {{ task.deadline|date:"Y-m-d H:i"}}<br></p>
+            <p>Status:  {{ task.get_status_display }}</p>
+            <form action="{% url 'task_change_status' task.pk %}" method="POST">
+                {% csrf_token %}
+                <option value="{{ key }}" {% if task.status == key %}selected="selected" {% endif %}>{{ label }}</option>
+            </form>
+            <a href="{% url 'task_update' task.pk %}">Edit</a>
+            <a href="{% url 'task_delete' task.pk %}">Delete</a>
+        </li>
+        {% empty %}
+        <li>No tasks have been submitted</li>
+        {% endfor %}
+    </ul>
+    {% endblock %}
 </body>
 
 </html>
