--- a/myproject/todo/static/css/home.css
+++ b/myproject/todo/static/css/home.css
@@ -1,98 +1,293 @@
- * {
-     margin: 0;
-     padding: 0;
-     box-sizing: border-box;
- }
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        font-family: 'Open Sans', sans-serif;
+    }
 
- nav {
-     background: #303f49;
-     color: white;
-     display: flex;
-     justify-content: space-between;
-     align-items: center;
-     padding: 10px 20px;
- }
+    nav {
+        background: #303f49;
+        color: white;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px 20px;
+    }
 
- .logo_pic {
-     width: 150px;
-     cursor: pointer;
- }
+    .logo_pic {
+        width: 150px;
+        cursor: pointer;
+    }
 
- .nav-links {
-     display: flex;
-     list-style: none;
-     gap: 20px;
- }
+    .nav-links {
+        display: flex;
+        list-style: none;
+        gap: 20px;
+    }
 
- .register1,
- .login1 {
-     background-color: #576984;
-     color: #fff;
-     padding: 10px 10px;
-     border-radius: 5px;
-     border: none;
- }
+    .register1,
+    .login1 {
+        background-color: #576984;
+        color: #fff;
+        padding: 10px 10px;
+        border-radius: 5px;
+        border: none;
+    }
 
- .register1 a,
- .login1 a {
-     color: #fff;
-     text-decoration: none;
- }
+    .register1 a,
+    .login1 a {
+        color: #fff;
+        text-decoration: none;
+    }
 
- .menu-toggle {
-     display: none;
-     flex-direction: column;
-     cursor: pointer;
- }
+    .menu-toggle {
+        display: none;
+        flex-direction: column;
+        cursor: pointer;
+    }
 
- .menu-toggle span {
-     width: 25px;
-     height: 3px;
-     background: white;
-     margin: 4px 0;
-     transition: 0.3s;
- }
+    .menu-toggle span {
+        width: 25px;
+        height: 3px;
+        background: white;
+        margin: 4px 0;
+        transition: 0.3s;
+    }
 
- @media (max-width: 768px) {
-     .nav-links {
-         position: absolute;
-         top: 48px;
-         left: -100%;
-         background: #303f49;
-         color: white;
-         flex-direction: column;
-         width: 100%;
-         text-align: center;
-         transition: left 0.3s ease-in-out;
-         padding: 20px 0;
-     }
+    .all {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+    }
 
-     .nav-links.active {
-         left: 0;
-     }
+    .text {
+        color: #474747;
+        padding: 10px 15px;
+    }
 
-     .menu-toggle {
-         display: flex;
-     }
+    .box {
+        display: flex;
+        justify-content: space-between;
+        padding: 50px;
+        width: 100%;
+        max-width: 1250px;
+        align-items: center;
+        background-color: #e9e6e6;
+        border-radius: 20px;
+        flex-wrap: wrap;
+        margin: 10px;
+        box-shadow: 5px 5px 5px rgba(116, 103, 103, 0.5);
 
-     .register1,
-     .login1 {
-         background-color: #263f64;
-         color: #fff;
-         padding: 10px 15px;
-         border-radius: 5px;
-         border: none;
-         width: 60%;
-         max-width: 250px;
-         display: flex;
-         justify-content: center;
-         margin: 10px auto;
+    }
 
-     }
- }
+    .update_btn {
+        background-color: #859dc1;
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 10px;
+        text-decoration: none;
+    }
 
- .hello_msg {
-     font-size: 18px;
-     color: #fff;
-     margin-right: 20px;
- }
+    .delete_btn {
+        background-color: #2c528b;
+        color: #fff;
+        padding: 10px 20px;
+        margin: 15px;
+        border-radius: 10px;
+        text-decoration: none;
+    }
+
+    .btns {
+        padding: 15px 10px;
+    }
+
+    .filtering {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 20px;
+        padding: 20px;
+    }
+
+    .buttons {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    .add_tasks {
+        padding: 12px 10px;
+        margin: 10px;
+        width: 100%;
+        background-color: #263f64;
+        color: #fff;
+        text-decoration: none;
+        border-radius: 5px;
+    }
+
+    .main_container {
+        display: flex;
+        justify-content: center;
+        margin: 30px;
+    }
+
+    .no-text {
+        text-align: center;
+        color: #3b424e;
+        font-weight: bold;
+        margin-top: 40px;
+    }
+
+    .submit_btn {
+        background-color: #263f64;
+        color: #fff;
+        padding: 10px 20px;
+        margin: 15px;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 15px;
+    }
+
+    .done_btn {
+        background-color: #263f64;
+        color: #fff;
+        padding: 10px 20px;
+        margin: 15px;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 15px;
+    }
+
+    .box.done {
+        background-color: #86ff86;
+    }
+
+    .box.done p.text {
+        text-decoration: line-through;
+        color: gray;
+    }
+
+    .box.soon {
+        background-color: yellow;
+    }
+
+    .box.overdue {
+        background-color: rgb(240, 43, 43);
+    }
+
+
+    .box_for_filter {
+        display: flex;
+        box-shadow: 5px 5px 5px rgba(238, 237, 237, 0.5);
+        background-color: #cfd1d5;
+        width: 100%;
+        border-radius: 20px;
+    }
+
+    .main_box_for_filter {
+        display: flex;
+        justify-content: center;
+        padding: 20px;
+        margin-top: 30px;
+    }
+
+    #id_deadline_time_0,
+    #id_deadline_time_1,
+    #id_expired_date,
+    #id_status {
+        border: none;
+        border-bottom: 2px solid #a0a0a0;
+        border-radius: 0px;
+        outline: none;
+        padding: 10px;
+        margin: 15px;
+    }
+
+    .filter_and_tasks {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    /* fillform */
+    form.fill_form {
+        background-color: rgb(133, 167, 197);
+        width: auto;
+        max-width: 500px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 10px;
+        text-align: center;
+        padding: 10px;
+    }
+
+    #id_title,
+    #id_description,
+    #id_deadline {
+        margin: 10px;
+        display: flex;
+        justify-content: center;
+        border-radius: 10px;
+        text-align: center;
+        padding: 10px 10px;
+    }
+
+    .main {
+        display: flex;
+        justify-content: center;
+    }
+
+    .createtext {
+        text-align: center;
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+
+    @media (max-width: 768px) {
+        .nav-links {
+            position: absolute;
+            top: 48px;
+            left: -100%;
+            background: #303f49;
+            color: white;
+            flex-direction: column;
+            width: 100%;
+            text-align: center;
+            transition: left 0.3s ease-in-out;
+            padding: 20px 0;
+        }
+
+        .nav-links.active {
+            left: 0;
+        }
+
+        .menu-toggle {
+            display: flex;
+        }
+
+        .register1,
+        .login1 {
+            background-color: #263f64;
+            color: #fff;
+            padding: 10px 15px;
+            border-radius: 5px;
+            border: none;
+            width: 60%;
+            max-width: 250px;
+            display: flex;
+            justify-content: center;
+            margin: 10px auto;
+
+        }
+    }
+
+    .hello_msg {
+        font-size: 18px;
+        color: #fff;
+        margin-right: 20px;
+    }
