--- a/myproject/todo/static/css/home.css
+++ b/myproject/todo/static/css/home.css
@@ -89,15 +89,6 @@
         text-decoration: none;
     }
 
-    .delete_btn {
-        background-color: #2c528b;
-        color: #fff;
-        padding: 10px 20px;
-        margin: 15px;
-        border-radius: 10px;
-        text-decoration: none;
-    }
-
     .btns {
         padding: 15px 10px;
     }
@@ -149,6 +140,7 @@
         border-radius: 10px;
         cursor: pointer;
         font-size: 15px;
+        text-align: center;
     }
 
     .done_btn {
@@ -159,6 +151,7 @@
         border-radius: 10px;
         cursor: pointer;
         font-size: 15px;
+        text-decoration: none;
     }
 
     .box.done {
@@ -212,40 +205,15 @@
         flex-wrap: wrap;
     }
 
-    /* fillform */
-    form.fill_form {
-        background-color: rgb(133, 167, 197);
-        width: auto;
-        max-width: 500px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
+    .delete_btn {
+        background-color: #789cd1;
+        color: #fff;
+        padding: 10px 20px;
+        margin: 15px;
+        font-size: 15px;
         border-radius: 10px;
-        text-align: center;
-        padding: 10px;
-    }
-
-    #id_title,
-    #id_description,
-    #id_deadline {
-        margin: 10px;
-        display: flex;
-        justify-content: center;
-        border-radius: 10px;
-        text-align: center;
-        padding: 10px 10px;
-    }
-
-    .main {
-        display: flex;
-        justify-content: center;
-    }
-
-    .createtext {
-        text-align: center;
-        margin-top: 30px;
-        margin-bottom: 20px;
+        text-decoration: none;
+        border: none;
     }
 
     @media (max-width: 768px) {
