--- a/myproject/todo/templates/todo_folder/home.html
+++ b/myproject/todo/templates/todo_folder/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %} Home {% endblock %}</title>
     <link rel="stylesheet" href="{% static 'css/home.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 
 <body>
