--- a/myproject/todo/templates/todo_folder/task_create.html
+++ b/myproject/todo/templates/todo_folder/task_create.html
@@ -3,13 +3,14 @@
 {% block title %}Task Form{% endblock %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'css/create_task.css' %}">
 <h3 class="createtext">{% if form.instance.pk %}Edit{% else %}Create{% endif %} Task</h3>
 <div class="main">
 <form class="fill_form" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <button class="submit_btn" type="submit">Create</button>
-    <a class="submit_btn" href="{% url 'home' %}">Cancel</a>
+    <button class="create_btn" type="submit">Create</button>
+    <a class="cancel_btn" href="{% url 'home' %}">Cancel</a>
 </form>
 </div>
 {% endblock %}
