--- a/myproject/todo/templates/todo_folder/task_delete.html
+++ b/myproject/todo/templates/todo_folder/task_delete.html
@@ -1,11 +1,20 @@
 {% extends 'todo_folder/home.html' %}
+{% load static %}
 {% block title %}List of tasks {% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/delete_task.css' %}">
+{% endblock %}
+
+
 {% block content %}
-<h3>{% if form.instance.pk %}Edit{% else %} Delete {% endif %} a task</h3>
-<form method="POST">
+<div class="delete_box_main">
+<form class="delete_box_container"  method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <button type="submit">Delete</button>
-    <a href="{% url 'home' %}">Cancel</a>
+    <h3 class="delete_text">{% if form.instance.pk %}Edit{% else %} Are you sure you want to delete task: {{task.title}} ?{% endif %}</h3>
+    <button class="delete_btn" type="submit">Delete</button>
+    <a class="cancel_btn" href="{% url 'home' %}">Cancel</a>
 </form>
+</div>
 {% endblock %}
