Email notification and some logics modified

--- a/myproject/todo/static/css/create_task.css
+++ b/myproject/todo/static/css/create_task.css
@@ -1,4 +1,3 @@
-    /* fillform */
     form.fill_form {
         background-color: rgb(133, 167, 197);
         width: auto;
@@ -10,11 +9,14 @@
         border-radius: 10px;
         text-align: center;
         padding: 10px;
+
     }
 
     #id_title,
     #id_description,
     #id_deadline {
+        border-bottom: 2px #0d264c;
+        outline: none;
         margin: 10px;
         display: flex;
         justify-content: center;
