--- a/myproject/todo/templates/todo_folder/login.html
+++ b/myproject/todo/templates/todo_folder/login.html
@@ -1,3 +1,4 @@
+{% extends 'todo_folder/home.html' %}
 {% load static %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/register.css' %}">
