--- a/myproject/todo/templates/todo_folder/login.html
+++ b/myproject/todo/templates/todo_folder/login.html
@@ -1,5 +1,6 @@
 {% extends 'todo_folder/home.html' %}
 {% load static %}
+{% block title %}Welcome back!{% endblock %}
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/register.css' %}">
 <div class="all">
