--- a/myproject/todo/templates/todo_folder/task_delete.html
+++ b/myproject/todo/templates/todo_folder/task_delete.html
@@ -1,6 +1,6 @@
 {% extends 'todo_folder/home.html' %}
 {% load static %}
-{% block title %}List of tasks {% endblock %}
+{% block title %}Delete a task {% endblock %}
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static 'css/delete_task.css' %}">
