--- a/myproject/todo/static/css/home.css
+++ b/myproject/todo/static/css/home.css
@@ -6,7 +6,7 @@
     }
 
     nav {
-        background: #303f49;
+        background: #1b4965;
         color: white;
         display: flex;
         justify-content: space-between;
@@ -62,23 +62,24 @@
     }
 
     .text {
-        color: #474747;
+        color: #000000;
         padding: 10px 15px;
     }
 
     .box {
         display: flex;
         justify-content: center;
-        padding: 50px;
+        padding: 20px 20px;
         width: 100%;
-        max-width: 1250px;
+        height: auto;
+        max-width: 1200px;
         align-items: center;
-        background-color: #e9e6e6;
+        background-color: #bee9e8;
         border-radius: 20px;
         flex-wrap: wrap;
         margin: 10px;
         box-shadow: 5px 5px 5px rgba(116, 103, 103, 0.5);
-
+        color: #000000;
     }
 
     .update_btn {
@@ -169,18 +170,17 @@
     }
 
     .box.soon {
-        background-color: yellow;
+        background-color: rgb(248, 248, 126);
     }
 
     .box.overdue {
-        background-color: rgb(240, 43, 43);
+        background-color: #c1121f;
     }
-
 
     .box_for_filter {
         display: flex;
         box-shadow: 5px 5px 5px rgba(238, 237, 237, 0.5);
-        background-color: #cfd1d5;
+        background-color: #cae9ff;
         width: 100%;
         border-radius: 20px;
     }
@@ -197,7 +197,7 @@
     #id_expired_date,
     #id_status {
         border: none;
-        border-bottom: 2px solid #a0a0a0;
+        border-bottom: 2px solid #a6c7e4;
         border-radius: 0px;
         outline: none;
         padding: 10px;
