--- a/myproject/todo/templates/todo_folder/task_create.html
+++ b/myproject/todo/templates/todo_folder/task_create.html
@@ -1,10 +1,10 @@
 {% extends 'todo_folder/home.html' %}
 {% load static %}
-{% block title %}Task Form{% endblock %}
+{% block title %}Create a task{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/create_task.css' %}">
-<h3 class="createtext">{% if form.instance.pk %}Edit{% else %}Create{% endif %} Task</h3>
+<h3 class="createtext">{% if form.instance.pk %}Edit{% else %}Create{% endif %} a task</h3>
 <div class="main">
 <form class="fill_form" method="POST">
     {% csrf_token %}
