--- a/myproject/todo/templates/todo_folder/task_update.html
+++ b/myproject/todo/templates/todo_folder/task_update.html
@@ -1,16 +1,16 @@
 {% extends 'todo_folder/home.html' %}
 {% load static %}
-{% block title %}List of tasks {% endblock %}
+{% block title %}Update a task{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/update_task.css' %}">
-<h3 class="edit_text">{% if form.instance.pk %}Edit{% else %}{% endif %} a task</h3>
-<div class="edit_box_center">
-<form class="edit_form" method="POST" >
+<h3 class="createtext">{% if form.instance.pk %}Edit{% else %}{% endif %} a task</h3>
+<div class="main">
+<form class="fill_form" method="POST">
     {% csrf_token %}
-    {{form.as_p}}
-    <button class="save_btn" type="submit">Save</button>
-    <a class="submit_btn" href="{% url 'home' %}">Cancel</a>
+    {{ form.as_p }}
+    <button class="create_btn" type="submit">Save</button>
+    <a class="cancel_btn" href="{% url 'home' %}">Cancel</a>
 </form>
 </div>
 {% endblock %}
