--- a/myproject/todo/static/css/home.css
+++ b/myproject/todo/static/css/home.css
@@ -64,12 +64,21 @@
     .text {
         color: #000000;
         padding: 10px 15px;
+        font-size: 14px;
+        text-align: left;
+        align-items: center;
+    }
+
+    h4.text1 {
+        color: #1f252a;
+        align-items: center;
+        list-style-type: circle;
     }
 
     .box {
         display: flex;
-        justify-content: center;
-        padding: 20px 20px;
+        justify-content: space-between;
+        padding: 20px 40px;
         width: 100%;
         height: auto;
         max-width: 1200px;
@@ -95,8 +104,8 @@
 
     .btns {
         display: flex;
-        justify-content: center;
-        margin-top: 10px;
+        gap: 10px;
+        flex-shrink: 0;
     }
 
     .filtering {
@@ -203,6 +212,12 @@
         padding: 10px;
         margin: 15px;
     }
+
+    .all_requirements {
+        display: flex;
+        align-items: center;
+    }
+
 
     .filter_and_tasks {
         display: flex;
