--- a/myproject/todo/templates/todo_folder/home.html
+++ b/myproject/todo/templates/todo_folder/home.html
@@ -14,7 +14,9 @@
 <body>
     <nav>
         <div class="logo"><a href="{% url 'home' %}"><img class="logo_pic" src="{% static 'img/logo.svg' %}"></a></div>
-        <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('active')"></div>
+       <div class="menu-toggle" onclick="document.querySelector('.nav-links').classList.toggle('active')">
+        <div></div>
+        </div>
         <ul class="nav-links">
             <button class="login1"><a href="{% url 'login' %}">Hello, {{request.user}}!</a></button>
             <button class="login1"><a href="{% url 'logout' %}">Logout</a></button>
@@ -46,17 +48,19 @@
         {% if task.status == 'done' %}done
         {% elif task.deadline_status == 'soon'%}soon
         {% elif task.deadline_status == 'overdue'%}overdue{% endif %}">
+        <table class="task-table">
         <div class="all_requirements">
-            <h4 class="text1"><strong> {{task.title}}</strong></h4>
-            <p class="text">{{task.description}}</p>
-            <p class="text"> Status:  {{ task.get_status_display }}</p>
-            <p class="text"> Deadline: {{ task.deadline|date:"Y-m-d H:i"}}<br></p>
-            <p class="text">Time left: {{ task.deadline|timeuntil }}</p>
+            <p class="text"><strong> {{task.title}} | </strong></p>
+            <p class="text">{{task.description}} | </p>
+            <p class="text"> Status:  {{ task.get_status_display }} | </p>
+            <p class="text"> Deadline: {{ task.deadline|date:"Y-m-d H:i"}} | <br></p>
+            <p class="text">Time left: {{ task.deadline|timeuntil }} | </p>
             <form action="{% url 'task_change_status' task.pk %}" method="POST">
                 {% csrf_token %}
                 <option value="{{ key }}" {% if task.status == key %}selected="selected" {% endif %}>{{ label }}</option>
             </form>
         </div>
+        </table>
             <div class="btns">
             <a class="done_btn" href="{% url 'task_mark_done' task.pk %}"><i class="fa-solid fa-check" ></i></a>
             <a class="update_btn" href="{% url 'task_update' task.pk %}"><i class="fa-solid fa-pen-to-square"></i></a>
@@ -70,5 +74,4 @@
     </ul>
     {% endblock %}
 </body>
-
 </html>
