--- a/myproject/todo/static/css/home.css
+++ b/myproject/todo/static/css/home.css
@@ -86,15 +86,15 @@
     .box {
         display: flex;
         justify-content: space-between;
-        padding: 20px 40px;
+        padding: 20px 20px;
         width: 100%;
         height: auto;
-        max-width: 1240px;
+        max-width: 1230px;
         align-items: center;
         background-color: #bee9e8;
         border-radius: 20px;
         flex-wrap: wrap;
-        margin: 8px;
+        margin: 10px;
         box-shadow: 5px 5px 5px rgba(143, 141, 141, 0.336);
         color: #000000;
     }
@@ -108,12 +108,6 @@
         cursor: pointer;
         font-size: 15px;
         text-decoration: none;
-    }
-
-    .btns {
-        display: flex;
-        gap: 10px;
-        flex-shrink: 0;
     }
 
     .filtering {
@@ -200,11 +194,11 @@
     }
 
     .box.soon {
-        background-color: rgb(248, 248, 126);
+        background-color: rgb(252, 252, 178);
     }
 
     .box.overdue {
-        background-color: #c1121f;
+        background-color: #fa727b;
     }
 
     .box_for_filter {
