--- a/myproject/todo/static/css/home.css
+++ b/myproject/todo/static/css/home.css
@@ -40,7 +40,6 @@
         border-radius: 2px;
     }
 
-
     .logo_pic {
         width: 150px;
         cursor: pointer;
@@ -76,22 +75,36 @@
     }
 
     .text {
-        color: #000000;
-        padding: 10px 15px;
+        padding: 5px 10px;
         font-size: 15px;
-        text-align: left;
+        text-align: center;
         align-items: center;
+        margin-top: 4px;
+    }
+
+    .text1 {
+        padding: 5px 10px;
+        font-size: 18px;
+        text-align: center;
+        align-items: center;
+        margin-top: 20px;
+        color: rgb(18, 63, 87);
+    }
+
+    .btns {
+        text-align: center;
+        align-items: center;
+        margin-bottom: 50px;
     }
 
     .box {
         display: flex;
-        justify-content: space-between;
-        padding: 20px 20px;
+        justify-content: space-around;
         width: 100%;
         height: auto;
-        max-width: 1230px;
+        max-width: 1260px;
         align-items: center;
-        background-color: #bee9e8;
+        background-color: #eaeaea;
         border-radius: 20px;
         flex-wrap: wrap;
         margin: 10px;
@@ -99,15 +112,196 @@
         color: #000000;
     }
 
-    .update_btn {
-        background-color: #a8b6ca;
+    .box .status-view {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 50px;
+        background: linear-gradient(135deg, #d9f1f3, #33b2c3);
+        color: #1b5a68;
+        padding: 5px 5px;
+        border-radius: 25px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: capitalize;
+        box-shadow: 0 3px 6px rgba(0, 80, 100, 0.1);
+    }
+
+
+    .box p.text {
+        color: rgb(31, 78, 100);
+        border-radius: 10px;
+    }
+
+    .box .deadline-view,
+    .box .time-view {
+        background-color: #89b6c0;
+        border-radius: 10px;
+    }
+
+    .box.done {
+        background-color: #86ff86;
+    }
+
+    .box.done p.text {
+        text-decoration: line-through;
+        color: rgb(21, 76, 43);
+        border-radius: 10px;
+    }
+
+    .box.done p.text1 {
+        color: rgb(25, 48, 12);
+        border-radius: 10px;
+    }
+
+    .box.done .status-view {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 50px;
+        background: linear-gradient(135deg, #cbe4d7, #29ff90);
+        color: #1b5a68;
+        padding: 5px 5px;
+        border-radius: 25px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: capitalize;
+        box-shadow: 0 3px 6px rgba(0, 80, 100, 0.1);
+    }
+
+    .box.done .deadline-view,
+    .box.done .time-view {
+        background-color: #7cd34d;
+        border-radius: 10px;
+    }
+
+    .box.inprogress {
+        background-color: #fff4b0;
+    }
+
+    .box.inprogress .status-view {
+        width: 100%;
+        color: white;
+        text-align: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 50px;
+        background: linear-gradient(135deg, #f1e8c6, #dece94);
+        padding: 5px 5px;
+        border-radius: 25px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: capitalize;
+        box-shadow: 0 3px 6px rgba(0, 80, 100, 0.1);
+    }
+
+    .box.inprogress p.text {
+        color: #8f8011;
+    }
+
+    .box.inprogress p.text1 {
+        color: rgb(95, 96, 16);
+        border-radius: 10px;
+    }
+
+    .box.inprogress .deadline-view,
+    .box.inprogress .time-view {
+        background-color: #e8de84;
+        border-radius: 10px;
+    }
+
+    .box.overdue {
+        background-color: #fa727b;
+    }
+
+    .box.overdue .status-view {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 50px;
+        background: linear-gradient(135deg, #e59696, #f10606);
+        color: #1b5a68;
+        padding: 5px 5px;
+        border-radius: 25px;
+        font-weight: 600;
+        letter-spacing: 0.5px;
+        text-transform: capitalize;
+        box-shadow: 0 3px 6px rgba(0, 80, 100, 0.1);
+    }
+
+    .box.overdue p.text {
+        color: rgb(116, 19, 19);
+    }
+
+    .box.overdue p.text1 {
+        color: rgb(101, 28, 10);
+        border-radius: 10px;
+    }
+
+    .box.overdue .deadline-view,
+    .box.overdue .time-view {
+        background-color: #c25858;
+        border-radius: 10px;
+    }
+
+    .submit_btn {
+        background-color: #263f64;
         color: #fff;
         padding: 10px 20px;
         margin: 15px;
         border-radius: 10px;
         cursor: pointer;
-        font-size: 15px;
+        border-color: none;
+        outline: none;
+    }
+
+    .done_btn {
+        background-color: #263f64;
+        color: #fff;
+        padding: 10px 10px;
+        margin: 15px;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 17px;
         text-decoration: none;
+    }
+
+    .update_btn {
+        background-color: #a8b6ca;
+        color: #fff;
+        padding: 10px 10px;
+        margin: 15px;
+        border-radius: 10px;
+        cursor: pointer;
+        font-size: 17px;
+        text-decoration: none;
+    }
+
+    .delete_btn {
+        background-color: #789cd1;
+        color: #fff;
+        padding: 10px 10px;
+        margin: 15px;
+        font-size: 17px;
+        border-radius: 10px;
+        text-decoration: none;
+        border: none;
+    }
+
+    .top-section {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .bottom-section {
+        display: flex;
+        gap: 20px;
+        flex-direction: column;
+        align-items: center;
     }
 
     .filtering {
@@ -116,14 +310,6 @@
         justify-content: center;
         margin: 20px;
         padding: 20px;
-    }
-
-    .buttons {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-        margin-top: 40px;
     }
 
     .main_container {
@@ -142,17 +328,19 @@
     .text_main {
         color: #1b4965;
         font-size: 15px;
+        margin-bottom: 20px;
+        text-align: center;
+        align-items: center;
     }
 
     .add_tasks {
-        padding: 10px 10px;
-        margin: 10px;
-        width: 90%;
-        background-color: #263f64;
-        color: #fff;
+        background-color: #1b4965;
+        color: white;
+        font-size: 14px;
+        padding: 10px 12px;
+        width: 100%;
+        border-radius: 10px;
         text-decoration: none;
-        border-radius: 5px;
-        font-size: 15px;
     }
 
     .no-text {
@@ -162,44 +350,6 @@
         margin-top: 40px;
     }
 
-    .submit_btn {
-        background-color: #263f64;
-        color: #fff;
-        padding: 10px 20px;
-        margin: 15px;
-        border-radius: 10px;
-        cursor: pointer;
-        font-size: 15px;
-        text-align: center;
-    }
-
-    .done_btn {
-        background-color: #263f64;
-        color: #fff;
-        padding: 10px 20px;
-        margin: 15px;
-        border-radius: 10px;
-        cursor: pointer;
-        font-size: 15px;
-        text-decoration: none;
-    }
-
-    .box.done {
-        background-color: #86ff86;
-    }
-
-    .box.done p.text {
-        text-decoration: line-through;
-        color: rgb(95, 90, 90);
-    }
-
-    .box.soon {
-        background-color: rgb(252, 252, 178);
-    }
-
-    .box.overdue {
-        background-color: #fa727b;
-    }
 
     .box_for_filter {
         display: flex;
@@ -230,6 +380,9 @@
 
     .all_requirements {
         display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
         align-items: center;
     }
 
@@ -240,16 +393,35 @@
         flex-wrap: wrap;
     }
 
-    .delete_btn {
-        background-color: #789cd1;
-        color: #fff;
-        padding: 10px 20px;
-        margin: 15px;
-        font-size: 15px;
-        border-radius: 10px;
-        text-decoration: none;
-        border: none;
+    @keyframes fadeInUp {
+        0% {
+            opacity: 0;
+            transform: translateY(30px);
+        }
+
+        100% {
+            opacity: 1;
+            transform: translateY(0);
+        }
     }
+
+    .box,
+    .main_container,
+    .filtering {
+        animation: fadeInUp 0.7s;
+    }
+
+    .box {
+        animation-delay: 0.3s;
+        animation-fill-mode: both;
+    }
+
+    .no-animation * {
+        animation: none !important;
+        transition: none !important;
+    }
+
+
 
 
     @media (max-width: 768px) {
