--- a/myproject/todo/templates/todo_folder/register.html
+++ b/myproject/todo/templates/todo_folder/register.html
@@ -16,7 +16,7 @@
         {{form.errors}}
 
         <a href="{% url 'login' %}">
-            <p>Already have an account?</p>
+            <p>Already have an account? Login</p>
         </a>
     </form>
 </div>
