--- a/myproject/todo/templates/todo_folder/login.html
+++ b/myproject/todo/templates/todo_folder/login.html
@@ -16,7 +16,7 @@
         {% endfor %}
 
         <a href="{% url 'register' %}">
-            <p>Don't have an account?</p>
+            <p>Don't have an account? Register</p>
         </a>
     </form>
 </div>
